RESOLVED FIXED111664
[chromium] Fix typo: destoryPage() => destroyPage()
https://bugs.webkit.org/show_bug.cgi?id=111664
Summary [chromium] Fix typo: destoryPage() => destroyPage()
David Dorwin
Reported 2013-03-06 19:07:05 PST
[chromium] Fix typo: destoryPage() => destroyPage()
Attachments
Patch (4.20 KB, patch)
2013-03-06 19:08 PST, David Dorwin
no flags
David Dorwin
Comment 1 2013-03-06 19:08:09 PST
WebKit Review Bot
Comment 2 2013-03-06 20:49:57 PST
Comment on attachment 191892 [details] Patch Clearing flags on attachment: 191892 Committed r145033: <http://trac.webkit.org/changeset/145033>
WebKit Review Bot
Comment 3 2013-03-06 20:50:00 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.