[chromium] Fix typo: destoryPage() => destroyPage() https://bugs.webkit.org/show_bug.cgi?id=111664

Patch by David Dorwin <ddorwin@chromium.org> on 2013-03-06
Reviewed by Kentaro Hara.

* src/WebHelperPluginImpl.cpp:
(WebKit::WebHelperPluginImpl::closeHelperPlugin):
(WebKit::WebHelperPluginImpl::destroyPage):
* src/WebHelperPluginImpl.h:
(WebHelperPluginImpl):
* src/WebPagePopupImpl.cpp:
(WebKit::WebPagePopupImpl::destroyPage):
(WebKit::WebPagePopupImpl::close):
(WebKit::WebPagePopupImpl::closePopup):
* src/WebPagePopupImpl.h:
(WebPagePopupImpl):

Canonical link: https://commits.webkit.org/130037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145033 268f45cc-cd09-0410-ab3c-d52691b4dbfc